fix: text-align home

--- a/src/scss/layout/_home.scss
+++ b/src/scss/layout/_home.scss
@@ -2,6 +2,7 @@
 
 .mw-home {
   align-items: center;
+  text-align: center;
 
   &-content {
     padding: spacing('6') spacing('2');
